--- a/SignageliveAPI/wwwroot/Test.html
+++ b/SignageliveAPI/wwwroot/Test.html
@@ -17,9 +17,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     <script type="text/javascript">
-        let baseUrl = 'https://localhost:7115/';
+        let baseUrl;
 
         $(function () {
+            baseUrl = location.protocol + '//' + location.hostname + (location.port ? ':' + location.port : '') + '/';
+            console.log(baseUrl);
             $.ajax({
                 method: "POST",
                 url: baseUrl + 'token'
